src/tests/TodoList/errors/ATodoCannotBeAddedToAClosedList.ts
import { CustomError } from '../../../lib'

export default CustomError<'ATodoCannotBeAddedToAClosedList'>({
  name: 'ATodoCannotBeAddedToAClosedList',
})
